<resources>
    <string name="app_name" translatable="false">Book4Thought</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="string_search">Search</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="bookImage">bookImage</string>
    <string name="logoImage">logoImage</string>
    <string name="google_sign_in">Sign In with Google</string>
    <string name="string_logo">string_logo</string>
    <string name="title_activity_small">small</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_out">Signed Out</string>
    <string name="noString" translatable="false" >" "</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="search_hint">Search Here</string>
    <string name="title_activity_main" translatable="false">Book4Thought</string>
    <string name="sign_in">Sign In</string>
    <string name="google_Books_API" translatable="false">https://www.googleapis.com/books/v1/</string>

    <string name="hello_blank_fragment">Main Fragment View</string>
    <string name="title_activity_search">Search</string>
    <string name="book_thumbnail">Thumbnail</string>
    <string name="book_title">Title</string>
    <string name="book_author">Author</string>
    <string name="description">Description</string>
    <string name="title_activity_book_display">BookDisplay</string>
    <string name="book_description">description</string>
    <string name="read_book">Read Book!</string>
    <string name="open_on_google_play">Open in Google Play!</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="search_for">Search For:</string>
    <string name="author">Author</string>
    <string name="save_to_local_db">Save to Local DB</string>
    <string name="NothingToShow">Nothing To Show</string>
    <string name="deleteButton">deleteButton</string>
    <string name="bookmark">bookmark</string>
    <string name="save_book">Save Book</string>
    <string name="not_connected">Not Connected to the Internet!</string>
    <string name="account_info">Account Info</string>
    <string name="bookmarked_books">Bookmarked Books</string>
    <string name="suggestions">Show Suggestions</string>
    <string name="who_did_dis">who did dis</string>
</resources>
