<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_options_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_signIn"
            android:icon="@drawable/common_google_signin_btn_icon_dark_normal"
            android:title="@string/action_sign_in"
            android:visible="false" />
        <item
            android:id="@+id/nav_saved_books"
            android:icon="@drawable/ic_baseline_book_24px"
            android:title="@string/bookmarked_books" />
        <item
            android:id="@+id/nav_account_info"
            android:icon="@drawable/ic_baseline_account_circle_24px"
            android:title="@string/account_info" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_signOut"
            android:title="@string/sign_out"
            android:visible="false" />
        <item
            android:id="@+id/nav_disconnect"
            android:title="@string/disconnect"
            android:visible="false" />
    </group>

</menu>
