<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/book_display_scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:isScrollContainer="true"
    app:layout_scrollFlags="scroll"
    tools:context=".Fragments.BookDisplayFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/display_thumbnail"
                android:layout_width="157dp"
                android:layout_height="151dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/book_thumbnail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/display_book_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/book_title"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/book_title"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/display_book_authors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/book_author"
                    android:gravity="center_vertical|center_horizontal" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:isIndicator="true"
                    android:numStars="@integer/no_of_stars"
                    android:padding="8dp"
                    android:stepSize="1" />

                <ImageButton
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="false"
                    android:background="@color/colorGeneralBackground"
                    android:contentDescription="@string/save_book"
                    android:cropToPadding="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_baseline_book_24px" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/display_book_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/book_description" />

        <Button
            android:id="@+id/open_gplay_book_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_on_google_play" />

        <Button
            android:id="@+id/read_book_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_book" />

        <Button
            android:id="@+id/suggestions_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suggestions" />

    </LinearLayout>
</ScrollView>